--- a/foundation/accesscontrol/templates/accesscontrol/forgotten_password.html
+++ b/foundation/accesscontrol/templates/accesscontrol/forgotten_password.html
@@ -1,6 +1,5 @@
 {% extends "core/base_bs.html" %}
-{% load i18n %}
-{% load staticfiles %}
+{% load i18n staticfiles %}
 
 {% block page_title %}
 <title>{{ service.project_name }} - {% trans "Forgotten password" %} </title>
@@ -10,7 +9,7 @@
     {{ block.super }}
     <style type="text/css">
         #navbar .search, #navbar .navbar-right {display: none}
-        #content {margin-top: 5%}
+        #content {padding-top: 80px; margin-top: 5%}
         #content > div {margin: auto}
         div#forgotten-pwd {width: 360px}
         div#forgotten-pwd form {border: 2px solid #dce4ec; border-radius: 4px; margin-top: 60px; padding: 30px}
@@ -21,12 +20,6 @@
         .directions {font-size: 16px; margin-top: 90px; text-align: center}
         div.success, div.failure {margin: 60px 0 15px; padding: 10px}
     </style>
-{% endblock %}
-
-{% block header_brand %}
-<div class="navbar-header">
-    <a class="navbar-brand" href="{% url 'home' %}">{{ service.project_name }}</a>
-</div>
 {% endblock %}
 
 {% block content %}
