--- a/foundation/core/templates/core/default_home.html
+++ b/foundation/core/templates/core/default_home.html
@@ -1,6 +1,5 @@
 {% extends "core/base_bs.html" %}
-{% load i18n %}
-{% load staticfiles %}
+{% load i18n staticfiles %}
 {% block page_title %}<title>{{ service.project_name }} - {{ config.short_description  }} </title>{% endblock %}
 {% block head_style %}
     {{ block.super }}
