--- a/foundation/accesscontrol/templates/accesscontrol/profile.html
+++ b/foundation/accesscontrol/templates/accesscontrol/profile.html
@@ -1,7 +1,5 @@
 {% extends "core/base_bs.html" %}
-{% load i18n %}
-{% load humanize %}
-{% load staticfiles %}
+{% load i18n humanize staticfiles auth_tokens %}
 
 {% block page_title %}
 <title> {{ profile_name }} - ikwen </title>
@@ -41,32 +39,38 @@
                 </header>
                 <div class="container-fluid" id="cards">
                     {% for elt in access_requests %}
-                    <section class="access-request subtle-shade">
+                    <section id="{{ elt.rq.id }}" class="access-request subtle-shade">
                         <div class="logo">
                             <img src="{{ elt.rq.service.config.logo.url }}" />
                             <h4>{{ elt.rq.service.project_name }}</h4>
                         </div>
                         <div class="details row">
                             <div class="about">
-                                <div class="col-sm-8 col-md-8">
+                                <div class="col-sm-6 col-md-6">
                                     <h3>{{ elt.rq.get_title }}</h3>
                                     <p>{{ elt.rq.get_description }}</p>
                                 </div>
-                                <div class="col-sm-4 col-md-4">
-                                    <button id="allow-access" class="btn btn-success btn-sm btn-block" data-request-id="{{ elt.rq.id }}" data-access-type="{{ elt.rq.type }}">{% trans "Grant access" %}</button>
+                                <div class="col-sm-3 col-md-3">
+                                    <button class="btn btn-success btn-sm btn-block allow-access" data-request-id="{{ elt.rq.id }}" data-access-type="{{ elt.rq.type }}">{% trans "Grant access" %}</button>
                                 </div>
+                                <div class="col-sm-3 col-md-3" style="cursor: pointer; font-weight: 700; padding-top: 7px">
+                                    <span class="text-danger deny-access" data-request-id="{{ elt.rq.id }}">{% trans "No, Refuse" %}</span>
+                                </div>
+{#                                <div class="col-sm-3 col-md-3">#}
+{#                                    <button id="deny-access" class="btn btn-danger btn-sm btn-block" data-request-id="{{ elt.rq.id }}">{% trans "Refuse" %}</button>#}
+{#                                </div>#}
                             </div>
                             <div class="groups" style="display: none">
                                 <div class="group-choice">
                                     <h3>{% trans "Grant access as:" %}</h3>
                                     {% for group in elt.groups %}
                                         <div class="form-group">
-                                            <div class="radio"> <label> <input type="radio" name="group" value="{{ group.id }}" /> {{ group.name }} </label> </div>
+                                            <div class="radio"> <label> <input type="radio" class="group" name="group" value="{{ group.id }}" /> {{ group.name }} </label> </div>
                                         </div>
                                     {% endfor %}
                                 </div>
                                 <p class="text-success" style="display: none">{% trans "Access successfully granted to collaborator." %}</p>
-                                <button id="confirm-group" data-request-id="{{ elt.rq.id }}" class="btn btn-success btn-sm btn-block">{% trans "Confirm" %}</button>
+                                <button data-request-id="{{ elt.rq.id }}" class="btn btn-success btn-sm btn-block confirm-group">{% trans "Confirm" %}</button>
                             </div>
                         </div>
                     </section>
@@ -99,7 +103,7 @@
                             {% if is_company %}
                                 <li>
                                     <label>{% trans "Site web" %}</label>
-                                    <span>{{ service.url }} - <a href="{{ service.url }}">{% trans "Visit" %}</a></span>
+                                    <span>{{ service.url }} - <a href="{{ service.url|append_auth_tokens:request }}">{% trans "Visit" %}</a></span>
                                 </li>
                             {% endif %}
                         </ul>
@@ -107,13 +111,13 @@
                             <div class="actions">
                                 {% if request.user.is_authenticated %}
                                     {% if not is_customer %}
-                                        <button id="require-service" class="btn btn-primary btn-sm" data-service-id="{{ service.id }}">{% trans "Require service" %}</button>
+                                        <button class="btn btn-primary btn-sm request-access" data-service-id="{{ service.id }}" data-access-type="ServiceRequest">{% trans "Request service" %}</button>
                                     {% endif %}
                                     {% if not is_collabo %}
-                                        <button id="require-collabo" class="btn btn-success btn-sm" data-service-id="{{ service.id }}">{% trans "Require collaboration" %}</button>
+                                        <button class="btn btn-success btn-sm request-access" data-service-id="{{ service.id }}" data-access-type="CollaborationRequest">{% trans "Request collaboration" %}</button>
                                     {% endif %}
-                                {% else %}
-                                    <a class="btn btn-primary btn-sm">{% trans "Require service" %}</a>
+                                {% elif not is_customer %}
+                                    <a class="btn btn-primary btn-sm" href="{% url 'ikwen:request_access' %}?service_id={{ service.id }}&access_type=ServiceRequest">{% trans "Request service" %}</a>
                                 {% endif %}
                             </div>
                         {% endif %}
@@ -121,62 +125,10 @@
                 </div>
             </div>
         {% endblock %}
-        <div id="ad-space-right">
-            <div>
-                <h4>{% trans "Sponsored Ads" %}</h4>
-                <div id="ad"></div>
-            </div>
-        </div>
+        {% include 'core/snippets/ads.html' %}
     </div>
 {% endblock %}
 {% block js %}
     {{ block.super }}
-    <script type="text/javascript">
-        (function() {
-            var COLLABORATION_REQUEST = 'CollaborationRequest';
-            $('#require-collabo').click(function() {
-                var serviceId = $(this).data('service-id');
-                $.getJSON('{% url 'ikwen:request_access' %}',
-                        {access_type: COLLABORATION_REQUEST, service_id: serviceId, format: 'json'}, function(data) {
-                    if (data.success) {
-                        $('section#about .actions').addClass('text-success').html('{% trans "Request successfully submitted." %}');
-                    }
-                })
-            });
-            $('#allow-access').click(function() {
-                var requestId = $(this).data('request-id'),
-                    accessType = $(this).data('access-type'),
-                    _$details = $(this).parents('.details');
-                if (accessType == COLLABORATION_REQUEST) {
-                    if (_$details.find('.groups').length == 1) {
-                        var groupId = _$details.find('.groups input').val();
-                        _$details.find('.group-choice').hide();
-                        confirmCollaborationRequest(requestId, groupId, _$details);
-                    } else {
-                        _$details.find('.about').hide();
-                        _$details.find('.groups').show();
-                    }
-                } else {
-
-                }
-            });
-            $('#confirm-group').click(function() {
-                var requestId = $(this).data('request-id'),
-                    groupId = $('div#access-request .groups input[name=group]').val(),
-                    _$details = $(this).parents('.details');
-                confirmCollaborationRequest(requestId, groupId, _$details);
-            });
-            function confirmServiceRequest() {
-                $.getJSON('{% url 'ikwen:grant_access_to_collaborator' %}')
-            }
-            function confirmCollaborationRequest(requestId, groupId, _$details) {
-                $.getJSON('{% url 'ikwen:grant_access_to_collaborator' %}', {request_id: requestId, group_id: groupId}, function(data) {
-                    if (data.success) {
-                        _$details.find('.about, .groups button').hide();
-                        _$details.find('.groups, .groups p.text-success').show();
-                    }
-                })
-            }
-        })()
-    </script>
+    {% if not is_console %} {% include 'accesscontrol/snippets/request_management.html' %} {% endif %}
 {% endblock %}
