--- a/foundation/billing/templates/billing/invoice_list.html
+++ b/foundation/billing/templates/billing/invoice_list.html
@@ -2,6 +2,8 @@
 {% load i18n %}
 {% load humanize %}
 {% load staticfiles %}
+{% load auth_tokens %}
+
 {% block page_title %}
 <title>{{ config.company_name }} - {% trans "Invoices" %}</title>
 {% endblock %}
@@ -60,7 +62,8 @@
                                     <td class="paid_on">{{ invoice.paid_on }}</td>
                                     <td class="payment-method">{{ invoice.method }}</td>
                                     <td class="action" style="padding: 6px 10px 7px; text-align: center">
-                                        <a href="{% url 'billing:invoice_detail' invoice.id %}" class="button default">{% trans "Details" %}</a>
+                                        {% url 'billing:invoice_detail' invoice.id as invoice_detail_url %}
+                                        <a href="{{ invoice_detail_url|append_auth_tokens:request }}" class="button default">{% trans "Details" %}</a>
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -97,7 +100,7 @@
             </div>
             <div style="color: #888; border-top: solid 1px #DDD; clear: both; float: right; font-size: .9em; margin-top: 6px; padding-top: 3px; text-align: right; width: 100%">
                 {% blocktrans %}
-                    Powered by <a href="{{ base_urls.ikwen }}" style="color: #666; text-decoration: none"><strong>ikwen</strong></a> &reg;.
+                    Powered by <a href="{{ settings.IKWEN_BASE_URL|append_auth_tokens:request }}" style="color: #666; text-decoration: none"><strong>ikwen</strong></a> &reg;.
                 {% endblocktrans %}
             </div>
         </div>
