--- a/static/ikwen/css/grids.css
+++ b/static/ikwen/css/grids.css
@@ -1,13 +1,14 @@
 /* 
     Document   : grids
-    Created on : Jul 17, 2012, 11:29:01 AM
-    Author     : Roddy MBOGNING
+    Created on : Aug 25, 2016, 11:29:01 AM
+    Author     : Kom Sihon
     Description:
         General display rules for data grid tables.
 */
-.grid thead td {color: #2c3e50; font-size: 18px; font-weight: 700; padding: 7px 5px}
+.grid thead td, .grid thead th {color: #2c3e50; font-size: 18px; font-weight: 700; padding: 7px 5px}
+.grid.fish-eye tr {background: none}
 .grid.fish-eye tr:nth-child(2n) {background: #FBFFFE}
-.grid tbody td {border-top: 1px solid #eee; height: 42px; padding: 0 0 0 6px}
+.grid tbody td, .grid tbody th {border-top: 1px solid #eee; height: 42px; padding: 0 0 0 6px}
 .grid tbody tr.warning td {background: #FFFBCA; color: #B10095}
 .grid tbody tr.warning td a {color: #B10095}
 .grid tbody tr.danger td, .grid tbody tr.pending td {color: #ff5050}
